# katabatic

./: Cargo.toml  LICENSE-MIT  README.md
crates/katabatic-core/: Cargo.toml
crates/katabatic-core/src/: app.rs  lib.rs  plugin.rs  runner.rs
crates/katabatic-core/src/error/: mod.rs
crates/katabatic-core/src/plugin/: mod.rs
crates/katabatic-ecs/: Cargo.toml
crates/katabatic-ecs/src/: component.rs  entity.rs  query.rs  storage.rs  world.rs
crates/katabatic-scene/: Cargo.toml
crates/katabatic-scene/src/: data.rs  id.rs  lib.rs  node.rs  relationship.rs  scene.rs  world.rs
crates/katabatic-util/: Cargo.toml
crates/katabatic-util/src/: error.rs  lib.rs  lock.rs
crates/katabatic-wgpu/: Cargo.toml
crates/katabatic-wgpu/src/: lib.rs
crates/katabatic-winit/: Cargo.toml
crates/katabatic-winit/src/: lib.rs
examples/dev-test/: Cargo.toml
examples/dev-test/src/: main.rs
src/: lib.rs
